# hackerlinks-site

./: .gitignore  AGENTS.md  README.md  next.config.ts  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy-cloudflare-pages.yml  deploy-pages.yml
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
app/about/: page.tsx
app/archive/: page.tsx
app/corrections/: page.tsx
app/issues/: page.tsx
app/issues/[date]/: page.tsx
app/methodology/: page.tsx
components/: archive-browser.tsx  breadcrumb-trail.tsx  issue-row.tsx  mobile-nav.tsx  page-intro.tsx  provenance-note.tsx  site-footer.tsx  site-header.tsx  theme-toggle.tsx
components/ui/: badge.tsx  button.tsx  separator.tsx  sheet.tsx
data/source/: product-history.json
docs/plans/: 2026-07-23-evidence-foundation.md
functions/: [[path]].d.ts  [[path]].js
lib/: archive-browser.ts  seo.ts  site-config.ts  site-data.ts
schemas/: issue.schema.json  item.schema.json  mention.schema.json
src/hackerlinks/: __init__.py  build.py  evidence_validation.py  html.py  indexnow.py  models.py  normalize.py  queries.py  slugs.py  sync.py
static/: site.css
templates/: archive.html  base.html  index.html  issue.html  item.html
templates/partials/: item_card.html  mention_row.html  stat_block.html
tests/: test_build.py  test_evidence_ui.py  test_evidence_validation.py  test_indexnow.py  test_metadata_integrity.py  test_normalize.py  test_slugs.py  test_sync.py
tests/fixtures/: sample-run.json
tests/node/: archive-browser.test.ts  site-data.test.ts  www-redirect.test.ts
(+2146 files in other folders)
