[project]
name = "hackerlinks"
version = "0.1.0"
description = "Static, data-first Hacker News discovery archive for HackerLinks"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0,<9",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.scripts]
hackerlinks-normalize = "hackerlinks.normalize:main"
hackerlinks-build = "hackerlinks.build:main"
hackerlinks-sync = "hackerlinks.sync:main"
